<resources>
    <string name="app_name">TapDx Gait Demo</string>

    <string name="action_settings">Settings</string>
    <string name="edit_message">Add suffix to filename</string>
    <string name="button_send">Save to Dropbox</string>
    <string name="step_counter">android.hardware.sensor.stepcounter</string>
    <string name="step_detector">android.hardware.sensor.stepdetector</string>
    <string name="btn_on">ON</string>
    <string name="gait_demo">Gait Demo</string>
    <string name="total_steps">Total Steps: 0</string>
    <string name="pedometer_service_started">TapDx Pedometer Started</string>
    <string name="pedometer_service_stopped">TapDx Pedometer Stopped</string>
    <string name="pedometer_service_label">TapDx Pedometer</string>
    <string name="pedometer_service_connected">TapDx Pedometer Connected</string>
    <string name="local_service_disconnected">TapDx Pedometer Disconnected</string>
</resources>
